we fixed the spacing extra 50px padding for store landing and store product details views

--- a/sites/all/themes/custom/dfc/sass/components/_page-store.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_page-store.scss
@@ -3,9 +3,6 @@ body.page-store {
   h1 {
     display: none;
   }
-  .l-main {
-    padding: 50px
-  }
 
   .view-store {
     background: $color-gray-medium-dark;
@@ -100,7 +97,6 @@ body.page-store {
 
 body.node-type-product-display {
   .l-main {
-    padding: 50px;
 
     .back-banner {
       background-color: $color-orange;
